--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.8
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Cors==5.0.0
+Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
