--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2025.4.26
 chardet==3.0.4
 charset-normalizer==3.4.2
 click==8.1.8
+cloudinary==1.44.1
 coverage==7.6.1
 decorator==5.2.1
 distlib==0.3.9
@@ -15,11 +16,13 @@ exceptiongroup==1.3.0
 executing==2.2.0
 filelock==3.16.1
 Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==2.8
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
@@ -41,6 +44,7 @@ platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.51
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.1
@@ -56,7 +60,7 @@ stack-data==0.6.3
 tomli==2.2.1
 traitlets==5.14.3
 typing_extensions==4.13.2
-urllib3==1.25.11
+urllib3==2.2.3
 virtualenv==20.31.0
 wcwidth==0.2.13
 Werkzeug==3.0.6
