--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.6",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
