--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,7 +7,6 @@ name = "pypi"
 flask = "==2.3.3"
 flask-sqlalchemy = "==3.1.1"
 flask-migrate = "==4.0.4"
-flask-jwt-extended = "==4.6.0"
 python-dotenv = "==1.0.1"
 psycopg2-binary = "==2.9.7"
 requests = "==2.31.0"
@@ -19,6 +18,7 @@ flasgger = "*"
 werkzeug = "==2.3.8"
 pytest = "*"
 pytest-flask = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
