--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,38 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.4
-Flask-JWT-Extended==4.6.0
-Flask-Cors==4.0.0
-Flask-Swagger-UI==4.11.1
+alembic==1.16.4
+attrs==25.3.0
+bcrypt==4.3.0
+blinker==1.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+cloudinary==1.44.1
 flasgger==0.9.7.1
-cloudinary==1.34.0
-python-dotenv==1.0.1
-psycopg2-binary
-requests==2.31.0
-gunicorn==21.2.0
-Werkzeug==2.3.8
-
-# Dev/Test
-pytest==7.4.0
-pytest-flask==1.3.0
+Flask==3.1.1
+Flask-Bcrypt==1.0.1
+flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==5.21.0
+greenlet==3.2.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+Mako==1.3.10
+MarkupSafe==3.0.2
+mistune==3.1.3
+packaging==25.0
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
+python-dotenv==1.1.1
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.4
+rpds-py==0.26.0
+six==1.17.0
+SQLAlchemy==2.0.41
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
