--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ Flask-Swagger-UI==4.11.1
 flasgger==0.9.7.1
 cloudinary==1.34.0
 python-dotenv==1.0.1
-psycopg2-binary
+psycopg2-binary==2.9.7
 requests==2.31.0
 gunicorn==21.2.0
 Werkzeug==2.3.8
