--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-alembic==1.14.1
+alembic==1.16.4
 attrs==25.3.0
 bcrypt==4.3.0
 blinker==1.9.0
@@ -15,6 +15,7 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==5.21.0
 greenlet==3.2.3
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
